# ds-manipulation-with-sqlite

./: LICENSE  README.md  pyproject.toml
project/: create_tables.py  create_tables.sql  data_base.sqlite  seed.py  selected.py  selected.sql
