[tool.poetry]
name = "ds-manipulation-with-sqlite"
version = "0.1.1"
description = "Creating a database for a task management system using SQLite."
authors = ["data-tamer2410 <vitaliy.dayneko2410@gmail.com>"]
packages = [{include = 'project'}]

[tool.poetry.dependencies]
python = "~3.12"
faker = "^28.4.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pylint = "^3.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
